<resources>
    <string name="app_name">HReader</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_read_rss">ReadRssActivity</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_name">Name:</string>
    <string name="prompt_password">Password</string>
    <string name="message_url">Please enter valid url!</string>
    <string name="message_title_url">Wrong url</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="input_rss">Please enter the url</string>
    <string name="wrong_info">Invalid information</string>
    <string name="re_enter">Please re-enter</string>

</resources>